k8s/goodjob-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  tls:
  - hosts:
    - ${HOST_NAME}
    secretName: web-devbox-kr-cert
  rules:
  - host: ${HOST_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goodjob
            port:
              number: 80
